# hsr-etl-pipeline

./: .gitignore  README.md  postgres_db.sql  pyproject.toml  transformation.sql
app/: streamlit_app.py
data/processed/: characters_700712292.csv  relics_700712292.csv
data/raw/: hsr_700712292.json
hsr_dbt_project/: dbt_project.yml
src/extract/: enka-extractor.py  test_api_var.py
src/transform/: transform.py
