[project]
name = "hsr-etl-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
packages = []

readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "enka (>=2.5.14,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.51.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "dbt-core (>=1.10.15,<2.0.0)",
    "dbt-duckdb (>=1.10.0,<2.0.0)",
    "dbt-postgres (>=1.9.1,<2.0.0)"
]
